--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -2,7 +2,8 @@ version: 0.1
 cli:
   version: 1.7.1-beta.1
 api:
-  address: api.trunk-staging.io:8443
+  address: sam-dell.tailnet-6e00.ts.net:8443
+
 plugins:
   sources:
     - id: trunk
